# cvRNN_jax

./: .gitignore  README.md  cv_rnn.py  cvrnn_image_segmentation.py  cvrnn_layer.py  example_2shapes.py  example_3shapes.py  example_natural_image.py  pyproject.toml  run_cv_rnn.py  test_cvrnn_layer.py
.github/workflows/: ci.yml
tests/: test_run_cv_rnn.py
