[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvrnn_jax"
version = "0.1.0"
description = "JAX implementation of the complex-valued RNN for segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.4.28",
  "jaxlib>=0.4.11",
  "equinox>=0.11.4",
  "jaxtyping>=0.2.29",
  "numpy>=1.26.4",
  "matplotlib>=3.10.1",
  "scipy>=1.13.1",
  "scikit-learn>=1.6.1"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

